	* reserved.c, config.h, parser.y, tree.h, cobc.c: added parsing
	  for XML-SCHEMA clause in SPECIAL NAMES
	* typeck.c: adjust for generation of ANY LENGTH registers (only to be
	  set in the runtime)
	* reserved.c, typeck.c: added all XML and JSON registers
	* config.def, parser.y, codegen.c: added cb_xml_parse_xmlss, passed
	  to runtime as module->xml_mode

2022-07-29  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* flag.def, config.def: make format a dialect option instead of a flag
	* help.c: mention alias for options --free and --fixed
	* cobc.h: extend cb_format_enum with COBOL85 (fixed format with
	  pending Area A enforcement); define CB_SF_FIXED and CB_SF_FREE
	* cobc.c: use new source format macros
	* parser.y, pplex.l: annotate every token that is not used in the
	  grammar

2022-07-27  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* typeck.c (cb_emit_sort_init): avoid SIGSEGV on SORT of toplevel field

2022-07-25  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c (finalize_file), codegen.c (output_file_initialization):
	  moved -Wunsupported check for ORGANIZATION INDEXED from codegen
	  to parsing
	* tree.c, typeck.c: msgid change for -Wunsupported

2022-07-24  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (create_implicit_picture): explicit disallow generating picture
	  from FUNCTION which size is commonly unknown (and use of intrinsic
	  functions outside of PROCEDURE DIVISION is an extension already)
	* field.c (validate_elem_screen_clauses_std): require PIC in more cases

2022-07-19  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c: temporary adjust source reference when building
	  registers to not point to an innocent source code
	* tree.c (cb_build_picture, char_to_precedence_idx): cater for possible
	  call without a current program
	* tree.c (cb_build_picture), tree.h: return cb_picture instead of cb_tree,
	  as all but one caller directly use it that way