@@ -229,6 +229,7 @@ usage-type:					unconformable
 synchronized-clause:			ok
 sync-left-right:			skip
 special-names-clause:			ok
+examine-statement:			unconformable # not verified yet
 top-level-occurs-clause:		ok
 value-of-clause:			obsolete # not verified yet
 numeric-boolean:			unconformable
