@@ -227,6 +227,7 @@ usage-type:					unconformable
 synchronized-clause:			ok
 sync-left-right:			skip
 special-names-clause:			error	# not verified yet
+examine-statement:			unconformable # not verified yet
 top-level-occurs-clause:		unconformable
 value-of-clause:			obsolete
 numeric-boolean:			unconformable
