@@ -226,6 +226,7 @@ usage-type:					unconformable
 synchronized-clause:			skip
 sync-left-right:			ok	# TODO: verify
 special-names-clause:			error
+examine-statement:			unconformable
 top-level-occurs-clause:		skip
 value-of-clause:			obsolete
 numeric-boolean:			unconformable
