@@ -246,6 +246,7 @@ usage-type:					ok
 synchronized-clause:			ok
 sync-left-right:			ok	# TODO: implement, now raises PENDING warning
 special-names-clause:			ok
+examine-statement:			warning
 top-level-occurs-clause:		ok
 value-of-clause:			obsolete
 numeric-boolean:			ok
