@@ -226,6 +226,7 @@ usage-type:				unconformable
 synchronized-clause:			ok
 sync-left-right:			ok
 special-names-clause:			error
+examine-statement:			ok
 top-level-occurs-clause:		skip
 value-of-clause:			obsolete
 numeric-boolean:			ok
