@@ -226,6 +226,7 @@ usage-type:					unconformable
 synchronized-clause:			ok
 sync-left-right:			skip
 special-names-clause:			error
+examine-statement:			unconformable # not verified yet
 top-level-occurs-clause:		skip
 value-of-clause:			obsolete
 numeric-boolean:			unconformable
