@@ -228,6 +228,7 @@ usage-type:					ok
 synchronized-clause:			skip	# only active with IBMCOMP=OK (active with dialects IBM + RM)
 sync-left-right:			skip # commentary only
 special-names-clause:			error
+examine-statement:			unconformable # not verified yet ("OSVS" only?)
 top-level-occurs-clause:		ok
 value-of-clause:			obsolete
 numeric-boolean:			ok			# this can be changed by the BINLINT directive (default is NUMERIC=OK)
