@@ -223,6 +223,7 @@ same-as-clause:				unconformable
 type-to-clause:				unconformable
 usage-type:					unconformable
 special-names-clause:			error
+examine-statement:			unconformable # not verified yet
 synchronized-clause:			ok
 sync-left-right:			skip
 top-level-occurs-clause:		skip
