@@ -227,6 +227,7 @@ same-as-clause:				unconformable
 type-to-clause:				unconformable
 usage-type:					unconformable
 special-names-clause:			error # not verified yet
+examine-statement:			unconformable # not verified yet
 synchronized-clause:			ok
 sync-left-right:			ignore # can raise a warning upon request
 top-level-occurs-clause:		unconformable
