@@ -229,6 +229,7 @@ same-as-clause:				ok
 type-to-clause:				unconformable
 usage-type:					unconformable
 special-names-clause:			error	# not verified yet
+examine-statement:			unconformable # not verified yet
 synchronized-clause:			ok
 sync-left-right:			ok
 top-level-occurs-clause:		unconformable
