@@ -245,6 +245,7 @@ usage-type:					unconformable
 synchronized-clause:			warning		# should not be used ... will prevent portability
 sync-left-right:			ok
 special-names-clause:			error
+examine-statement:			unconformable   # not verified yet
 top-level-occurs-clause:		skip
 value-of-clause:			warning		# should not be used ...
 numeric-boolean:			unconformable
