@@ -1,4 +1,8 @@
 
+2022-08-03  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>
+
+	* general: add option examine-statement
+
 2022-08-17  Simon Sobisch <simonsobisch@gnu.org>
 
 	* general: add xml-parse-xmlss, note: explicit NOT enabled
